--- a/05_componentes_bootstrap/public/01-Grid-System/04-grid-system-md-sm-xs.html
+++ b/05_componentes_bootstrap/public/01-Grid-System/04-grid-system-md-sm-xs.html
@@ -102,7 +102,11 @@
                 <div class="col-5 col-md-4">4(md)/6(xs)<div>
             </div>
 
-            
+            <div class="row">
+                <div class="col-6 col-md-4">6(xs)/4(md)</div>
+                <div class="col-6 col-md-4">6(xs)/4(md)</div>
+                <div class="col-6 col-md-4">6(xs)/4(md)</div>
+            </div>
         </div>
 
         <script type="text/javascript" src="../bootstrap4/js/jquery-slim.js"></script>
